another another fix

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -683,20 +683,20 @@
  PRC:0 "Zhongguo"
  PRC_DEF:0 "Zhongguo"
  PRC_ADJ:0 "Chinese"
- CHL_fascism:0 "Vanguard jalapeno"
- CHL_fascism_DEF:0 "Vanguard jalapeno"
- CHL_democratic:0 "jalapeno"
- CHL_democratic_DEF:0 "jalapeno"
+ CHL_fascism:0 "Vanguard Jalapeno"
+ CHL_fascism_DEF:0 "Vanguard Jalapeno"
+ CHL_democratic:0 "Jalapeno"
+ CHL_democratic_DEF:0 "Jalapeno"
  CHL_neutrality:0 "Atacama-Patagonian Free State"
  CHL_neutrality_DEF:0 "Atacama-Patagonian Free State"
- CHL_communism:0 "jalapeno Socialist Republic"
- CHL_communism_DEF:0 "the jalapeno Socialist Republic"
+ CHL_communism:0 "Jalapeno Socialist Republic"
+ CHL_communism_DEF:0 "the Jalapeno Socialist Republic"
  CHL_fascism_ADJ:0 "Chilean"
  CHL_democratic_ADJ:0 "Chilean"
  CHL_neutrality_ADJ:0 "Chilean"
  CHL_communism_ADJ:0 "Chilean"
- CHL:0 "jalapeno"
- CHL_DEF:0 "jalapeno"
+ CHL:0 "Jalapeno"
+ CHL_DEF:0 "Jalapeno"
  CHL_ADJ:0 "Chilean"
  COL_fascism:0 "Nueva Gran Muisca"
  COL_fascism_DEF:0 "Nueva Gran Muisca"
@@ -743,50 +743,50 @@
  ECU:0 "Kichwa"
  ECU_DEF:0 "Kichwa"
  ECU_ADJ:0 "Ecuadorian"
- ELS_fascism:0 "pupusa"
- ELS_fascism_DEF:0 "pupusa"
- ELS_democratic:0 "Republic of pupusa"
- ELS_democratic_DEF:0 "the Republic of pupusa"
- ELS_neutrality:0 "Teocracia de pupusa"
- ELS_neutrality_DEF:0 "Teocracia de pupusa"
+ ELS_fascism:0 "Pupusa"
+ ELS_fascism_DEF:0 "Pupusa"
+ ELS_democratic:0 "Republic of Pupusa"
+ ELS_democratic_DEF:0 "the Republic of Pupusa"
+ ELS_neutrality:0 "Teocracia de Pupusa"
+ ELS_neutrality_DEF:0 "Teocracia de Pupusa"
  ELS_communism:0 "Central American Socialist Republic"
  ELS_communism_DEF:0 "the Central American Socialist Republic"
  ELS_fascism_ADJ:0 "Salvadoran"
  ELS_democratic_ADJ:0 "Salvadoran"
  ELS_neutrality_ADJ:0 "Salvadoran"
  ELS_communism_ADJ:0 "Salvadoran"
- ELS:0 "El pupusa"
- ELS_DEF:0 "El pupusa"
+ ELS:0 "El Pupusa"
+ ELS_DEF:0 "El Pupusa"
  ELS_ADJ:0 "Salvadoran"
- GUA_fascism:0 "comedia Corporate State"
- GUA_fascism_DEF:0 "comedia Corporate State"
- GUA_democratic:0 "Republic of comedia"
- GUA_democratic_DEF:0 "the Republic of comedia"
- GUA_neutrality:0 "comedia"
- GUA_neutrality_DEF:0 "comedia"
- GUA_communism:0 "Union comedia"
- GUA_communism_DEF:0 "Union comedia"
+ GUA_fascism:0 "Comedia Corporate State"
+ GUA_fascism_DEF:0 "Comedia Corporate State"
+ GUA_democratic:0 "Republic of Comedia"
+ GUA_democratic_DEF:0 "the Republic of Comedia"
+ GUA_neutrality:0 "Comedia"
+ GUA_neutrality_DEF:0 "Comedia"
+ GUA_communism:0 "Union Comedia"
+ GUA_communism_DEF:0 "Union Comedia"
  GUA_fascism_ADJ:0 "Guatemalan"
  GUA_democratic_ADJ:0 "Guatemalan"
  GUA_neutrality_ADJ:0 "Guatemalan"
  GUA_communism_ADJ:0 "Guatemalan"
- GUA:0 "comedia"
- GUA_DEF:0 "comedia"
+ GUA:0 "Comedia"
+ GUA_DEF:0 "Comedia"
  GUA_ADJ:0 "Guatemalan"
- HON_fascism:0 "Corporatist baleada"
- HON_fascism_DEF:0 "Corporatist baleada"
- HON_democratic:0 "baleada"
- HON_democratic_DEF:0 "baleada"
- HON_neutrality:0 "baleada"
- HON_neutrality_DEF:0 "baleada"
- HON_communism:0 "baleada Commonwealth"
- HON_communism_DEF:0 "the baleada Commonwealth"
+ HON_fascism:0 "Corporatist Baleada"
+ HON_fascism_DEF:0 "Corporatist Baleada"
+ HON_democratic:0 "Baleada"
+ HON_democratic_DEF:0 "Baleada"
+ HON_neutrality:0 "Baleada"
+ HON_neutrality_DEF:0 "Baleada"
+ HON_communism:0 "Baleada Commonwealth"
+ HON_communism_DEF:0 "the Baleada Commonwealth"
  HON_fascism_ADJ:0 "Honduran"
  HON_democratic_ADJ:0 "Honduran"
  HON_neutrality_ADJ:0 "Honduran"
  HON_communism_ADJ:0 "Honduran"
- HON:0 "baleada"
- HON_DEF:0 "baleada"
+ HON:0 "Baleada"
+ HON_DEF:0 "Baleada"
  HON_ADJ:0 "Honduran"
  IRQ_fascism:0 "Al-Muthanna Ashur"
  IRQ_fascism_DEF:0 "Al-Muthanna Ashur"
@@ -1041,20 +1041,20 @@
  SIK:0 "Sinkiang"
  SIK_DEF:0 "Sinkiang"
  SIK_ADJ:0 "Sinkiang"
- TAN_fascism:0 "khoomei Nationalist Republic"
- TAN_fascism_DEF:0 "the khoomei Nationalist Republic"
- TAN_democratic:0 "khoomei Independent Republic"
- TAN_democratic_DEF:0 "the khoomei Independent Republic"
+ TAN_fascism:0 "Khoomei Nationalist Republic"
+ TAN_fascism_DEF:0 "the Khoomei Nationalist Republic"
+ TAN_democratic:0 "Khoomei Independent Republic"
+ TAN_democratic_DEF:0 "the Khoomei Independent Republic"
  TAN_neutrality:0 "Tannu Uriankhai"
  TAN_neutrality_DEF:0 "Tannu Uriankhai"
- TAN_communism:0 "khoomei commune"
- TAN_communism_DEF:0 "khoomei  commune"
+ TAN_communism:0 "Khoomei Commune"
+ TAN_communism_DEF:0 "Khoomei  Commune"
  TAN_fascism_ADJ:0 "Tuvan"
  TAN_democratic_ADJ:0 "Tuvan"
  TAN_neutrality_ADJ:0 "Tuvan"
  TAN_communism_ADJ:0 "Tuvan"
- TAN:0 "khoomei"
- TAN_DEF:0 "khoomei"
+ TAN:0 "Khoomei"
+ TAN_DEF:0 "Khoomei"
  TAN_ADJ:0 "Tuvan"
  TIB_fascism:0 "Jokhang Empire"
  TIB_fascism_DEF:0 "the Jokhang Empire"
@@ -1135,25 +1135,25 @@
  NZL:0 "New Zealand"
  NZL_DEF:0 "New Zealand"
  NZL_ADJ:0 "New Zealand"
- URG_fascism:0 "New Constitutional faina"
- URG_fascism_DEF:0 "New Constitutional faina"
- URG_democratic:0 "faina"
- URG_democratic_DEF:0 "faina"
+ URG_fascism:0 "New Constitutional Faina"
+ URG_fascism_DEF:0 "New Constitutional Faina"
+ URG_democratic:0 "Faina"
+ URG_democratic_DEF:0 "Faina"
  URG_neutrality:1 "Cisplatina"
  URG_neutrality_DEF:1 "Cisplatina"
- URG_communism:0 "Socialist Republic of faina"
- URG_communism_DEF:0 "the Socialist Republic of faina"
+ URG_communism:0 "Socialist Republic of Faina"
+ URG_communism_DEF:0 "the Socialist Republic of Faina"
  URG_fascism_ADJ:0 "Uruguayan"
  URG_democratic_ADJ:0 "Uruguayan"
  URG_neutrality_ADJ:1 "Cisplatine"
  URG_communism_ADJ:0 "Uruguayan"
- URG:0 "faina"
- URG_DEF:0 "faina"
+ URG:0 "Faina"
+ URG_DEF:0 "Faina"
  URG_ADJ:0 "Uruguayan"
  CUB_fascism:0 "Falangist Tropico"
  CUB_fascism_DEF:0 "Falangist Tropico"
- CUB_democratic:0 "Republic of tropico "
- CUB_democratic_DEF:0 "Republic of Tropico"
+ CUB_democratic:0 "Tropico "
+ CUB_democratic_DEF:0 "Tropico"
  CUB_neutrality:1 "Tropico"
  CUB_neutrality_DEF:1 "Tropico"
  CUB_ETH_neutrality_subject:0 "Imperial Tropican Territories"
@@ -1214,18 +1214,18 @@
  OMA_ADJ:0 "Oman"
  YEM_fascism:0 "Federation of South Arabia"
  YEM_fascism_DEF:0 "Federation of South Arabia"
- YEM_democratic:0 "lamb Arab Republic"
- YEM_democratic_DEF:0 "lamb Arab Republic"
- YEM_neutrality:0 "lamb"
+ YEM_democratic:0 "Lamb Arab Republic"
+ YEM_democratic_DEF:0 "Lamb Arab Republic"
+ YEM_neutrality:0 "Lamb"
  YEM_neutrality_DEF:0 "Yemen"
- YEM_communism:1 "People's Democratic Republic of lamb"
- YEM_communism_DEF:1 "the People's Democratic Republic of lamb"
+ YEM_communism:1 "People's Democratic Republic of Lamb"
+ YEM_communism_DEF:1 "the People's Democratic Republic of Lamb"
  YEM_fascism_ADJ:0 "Yemeni"
  YEM_democratic_ADJ:0 "Yemeni"
  YEM_neutrality_ADJ:0 "Yemeni"
  YEM_communism_ADJ:0 "Yemeni"
- YEM:0 "lamb"
- YEM_DEF:0 "lamb"
+ YEM:0 "Lamb"
+ YEM_DEF:0 "Lamb"
  YEM_ADJ:0 "Yemeni"
  ETH_fascism:1 "Konjo Empire"
  ETH_fascism_DEF:1 "the Konjo Empire"
@@ -1377,14 +1377,14 @@
  MEN:0 "Mengkukuo"
  MEN_DEF:0 "Mengkukuo"
  MEN_ADJ:0 "Mengjiang"
- KOR_fascism:0 "Independent Korean Governorate"
- KOR_fascism_DEF:0 "the Independent Korean Governorate"
- KOR_democratic:0 "Korea"
- KOR_democratic_DEF:0 "Korea"
- KOR_neutrality:1 "People's Republic of Korea"
- KOR_neutrality_DEF:1 "the People's Republic of Korea"
- KOR_communism:0 "Democratic People's Republic of Korea"
- KOR_communism_DEF:0 "the Democratic People's Republic of Korea"
+ KOR_fascism:0 "Independent Nagurea Governorate"
+ KOR_fascism_DEF:0 "the Independent Nagurea Governorate"
+ KOR_democratic:0 "Nagurea"
+ KOR_democratic_DEF:0 "Nagurea"
+ KOR_neutrality:1 "People's Republic of Nagurea"
+ KOR_neutrality_DEF:1 "the People's Republic of Nagurea"
+ KOR_communism:0 "Democratic People's Republic of Nagurea"
+ KOR_communism_DEF:0 "the Democratic People's Republic of Nagurea"
  KOR_fascism_ADJ:0 "Korean"
  KOR_democratic_ADJ:0 "Korean"
  KOR_neutrality_ADJ:0 "Korean"
