--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -1367,11 +1367,11 @@
   anz.1.a:0 "Shameful!"
   anz.2.t:0 "The italian people demand elections!"
   anz.2.d:0 "By rallying the italian population to go against the fascist menace of Anchovy for months, enough support has been gathered for the democratic party to go out the streets and demand fair, transparent elections. This has put Anchovy in quite a spot since her feeble grasp of power now is almost non-existant. With no support from its own cabinet, what could she possibly do?"
-  anz.2.a:0 "Perhaps I should rule Anzio through the power of democracy?"
+  anz.2.a:0 "Perhaps Carpaccio should rule Anzio through the power of democracy?"
   anz.2.b:0 "Democracy is nothing but a farce!"
   anz.3.t:0 "The communists demand power!"
   anz.3.d:0 "The workers have sabotaged all efforts from the fascists to mitigate their voices. With the factories on a halt and the constant strikes on the streets, Anchovy is powerless against her own people. her cabinet has secretly reunited in her office to see what the next step is for the future of the nation."
-  anz.3.a:0 "The workers revolution? I used to be a socialist, so I should lead it"
+  anz.3.a:0 "The workers revolution? Amaretto used to be a socialist, so she should lead it"
   anz.3.b:0 "Communism is nothing but a farce, to arms!"
   anz.4.t:0 "Anzio demands subjugation!"
   anz.4.d:0 "After several months of influencing our political sphere with their communist ideas they have sent an ultimate to submit to them or face the consequences."
@@ -1392,7 +1392,7 @@
   anz.9.t:0 "Albania refuses!"
   anz.9.d:0 "Nothing can be done about it..."
   anz.10.t:0 "Anzio crowns a new Queen"
-  anz.10.d:0 "After several months of an intensive monarchist sentiment rising in the country, the italian people demand the return of the monarchy into power. This has been a crossroad between the fascists put into power previously by Queen Emmanuel years before. What is to happen to Anzio now?"
+  anz.10.d:0 "After several months of an intensive monarchist sentiment rising in the country, the italian people demand the return of the monarchy into power. This has been a crossroad between the fascists put into power previously years before. What is to happen to Anzio now?"
   anz.10.a:0 "The new Queen... shall be Pepperoni!"
   anz.10.b:0 "Unnaceptable!"
   anz.11.t:0 "Instability in the administration"
@@ -1414,18 +1414,18 @@
   anz.16.d:0 "It's clear that my intentions to save Anzio are for the best. But what is the main purpose of my leadership?"
   anz.16.a:0 "Am I being paranoid?"
   anz.17.t:0 "Separatists movements start to rise"
-  anz.17.d:0 "Different faces of Anchovy start propping up all over Anzio displaying loyalty to different ideologies"
+  anz.17.d:0 "Different faces start propping up all over Anzio displaying loyalty to different ideologies"
   anz.17.a:0 "Alarming"
   anz.18.t:0 "The Anzai Union secedes!"
   anz.18.d:0 "Led by Amaretto, the communist party takes their stand in the north corner of the country decided to not follow any more of Anchovy's delusions."
   anz.18.a:0 "Communist bastards!"
-  anz.19.t:0 "The Italian Republic secedes!"
+  anz.19.t:0 "The Anzio Republic secedes!"
   anz.19.d:0 "Led by Carpaccio, the democratic party takes their stand in the north corner of the country decided not to follow any more of Anchovy's delusions."
   anz.19.a:0 "Rats! All of them!"
-  anz.20.t:0 "The Italian Empire secedes!"
-  anz.20.d:0 "Led by Queen Benedetto I, the monarchists takes their stand in the south corner of the country decided not to follow any more of Anchovy's delusions."
+  anz.20.t:0 "The Anzio Empire secedes!"
+  anz.20.d:0 "Led by Queen Pepperoni, the monarchists takes their stand in the south corner of the country decided not to follow any more of Anchovy's delusions."
   anz.20.a:0 "Scumbags!"
-  anz.21.t:0 "ITALIAN CIVIL WAR!"
+  anz.21.t:0 "ANZIO CIVIL WAR!"
   anz.21.d:0 "All these bastards will pay!"
   anz.21.a:0 "ANDIAMO!"
   anz.22.t:0 "Anzio seeks to extend an olive branch"
@@ -1455,7 +1455,7 @@
   anz.28.a:0 "Roma Invicta!"
   anz.28.b:0 "Interesting..."
   anz.29.t:0 "The Kingdom of Anzio demands annexation!"
-  anz.29.d:0 "Through a royal communicate given this morning to both the swiss and austrian mandataries, the italian Queen has made it very clear that she intends to unify both nations under her mantle and has sent an ultimatum that if they were not to comply, they would suffer the consequences."
+  anz.29.d:0 "Through a royal communicate given this morning to both the swiss and austrian mandataries, the Anzio Queen has made it very clear that she intends to unify both nations under her mantle and has sent an ultimatum that if they were not to comply, they would suffer the consequences."
   anz.29.a:0 "We better accept..."
   anz.29.b:0 "No surrender without a fight!"
   anz.30.t:0 "[From.GetNameDefCap] accepts annexation"
