--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -160,7 +160,7 @@
  GER_change_of_heart: "Change of Heart"
  GER_change_of_heart_desc: "Maybe the path of totalitarianism isnt always the solution. Perhaps the Reich needs to breathe free for once, without being told what to do all the time. \n\nOr does it?"
  GER_heart_of_iron: "Heart of Iron"
- GER_heart_of_iron_desc: "The status quo of fear and discipline has always been the key to our greatness. We don't need to open up or lay low. Strong men create good times. \n\nYet good times create weak men."
+ GER_heart_of_iron_desc: "The status quo of fear and discipline has always been the key to our greatness. We don't need to open up or lay low. Strong women create good times. \n\nYet good times create weak women."
 
  #MIHO MOBILIZATION
  GER_mobilization_miho: "Mobilisierungsplan Miho"
@@ -335,7 +335,7 @@
  GER_simplify_designs:0 "Simplify Designs"
  GER_simplify_designs_desc: "Cheaper manufacturing of goods will give us more to fight with although with some setbacks."
  GER_healthy_wealthy_and_wise:0 "Healthy, Wealthy, and Wise"
- GER_healthy_wealthy_and_wise_desc: "Early to bed, early to rise makes a man - "
+ GER_healthy_wealthy_and_wise_desc: "Early to bed, early to rise makes a Woman - "
  GER_renew_the_standard:0 "Renew the Standard"
  GER_renew_the_standard_desc: "Our general education for all needs to be improved, in doing so we can raise smarter and wiser minds for the future."
  GER_academy_subsidiaries:0 "Academy Subsidiaries"
@@ -488,7 +488,7 @@
  GER_consitutional_monarchy_desc:0 "While many wish to maintain a strict republic, the people have spoken and all wish to see Koume as Kaiser of our nation, whilst maintaining the parlimentary system we fought so hard for"
  GER_military_industry:0 "Zeitenwende"
  GER_military_industry_desc:0 "This is a turning moment for us, we must plow forwards and save Europe from the tryanny of Pravda"
- GER_military_buildup_desc:0 "The horns of war sound once more, as the final battle nears its occurrence, every man and women in our lands needs to know what's at stake, every factory must do more build more for eventual total victory."
+ GER_military_buildup_desc:0 "The horns of war sound once more, as the final battle nears its occurrence, every women in our lands needs to know what's at stake, every factory must do more build more for eventual total victory."
 # Fuck you fixes your focus tree more ##makes more of a mess
 GER_reform_wave:0 "Reform Wave"
  GER_reform_wave_desc:0 "With Kuromorimine's new constitution in place, we should expand the school size due to the students being able to have different opinions that wouldn't be scrutinize. Let's expand on these."
@@ -1045,7 +1045,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  JAP_tactical_engineering: "§CPhase II§!: Tactics"
  JAP_tactical_engineering_desc: "We must devise our Hokushin-ron/Nanshin-ron Tactics."
  JAP_man_the_guns: "§YPhase III§!: Man the Guns"
- JAP_man_the_guns_desc: "All these investments and stations are of no utter purpose if there are no men to man them. Volunteer conscripts shall be of use and shall then be trained diligently and strictly."
+ JAP_man_the_guns_desc: "All these investments and stations are of no utter purpose if there are no women to wpman them. Volunteer conscripts shall be of use and shall then be trained diligently and strictly."
  PACIFIC_DEFENSE_GARRISONS: "Set up garrison forces for the defense of our colonial islands. This will come at a cost on defenses adding up to the first two phases."
  CHINESE_DEFENSE_GARRISONS: "Set up garrison forces around our Chinese Border to help defend against them just in case."
  JAP_reinforcement: "§RPhase IV§!: Reincforcement"
@@ -1072,7 +1072,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  JAP_zaibtasu_expansion: "Zaibtasu Expansion"
  JAP_zaibtasu_expansion_desc: "These financial cliques in our academy can provide us aid in industrial and economic sector. But we shall keep a keen eye on their political interference and local actions."
  JAP_professionalism: "Colonial Professionalism"
- JAP_professionalism_desc: "Professionalism is the core of what the academy lacks. We must not only learn from ourselves but also be open to other ideas and methods. No man is an island, right?"
+ JAP_professionalism_desc: "Professionalism is the core of what the academy lacks. We must not only learn from ourselves but also be open to other ideas and methods. No woman is an island, right?"
  JAP_the_baron_of_manchuria: "Baroness Ikeda"
  JAP_the_baron_of_manchuria_desc: "With Manchuria developed politically and economically, we can now crown the fields of Manchuria to the Baroness that is Emi Ikeda for her brillant management on the matters at hand all the way over there."
  JAP_chihatan_armed_forces: "Chi-Ha-Tan Imperial Armed Forces"
@@ -1268,7 +1268,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  cht_the_zero_fighter: "The Zero Fighter"
  cht_the_zero_fighter_desc: "The Zero is a brillant fighter design from Mitusbishi. With this, we can rule the skies around the Pacific. Let's hope Ikeda can exploit this aircraft."
  cht_arms_modernization: "Arms Modernization"
- cht_arms_modernization_desc: "We must now modernize our equipment as the world follows suit! Men and bullets are just as equally as important."
+ cht_arms_modernization_desc: "We must now modernize our equipment as the world follows suit! Women and bullets are just as equally as important."
  cht_hosomi_industry: "Hosomi's Industry"
  cht_hosomi_industry_desc: "Hosomi's economic plans have brought about to us a boom in our economy. Can she keep it up?"
  cht_ikeda_industry: "Ikeda's Industry"
@@ -1770,7 +1770,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  FIN_end_with_the_nazism_desc:0 "Kuromormine has continued its decent into madness, despite our attempts to temper their ambitions its clear they are only in it for themselves, its time to stop using this bridge before we are forever tied to them, we will be ending our join military cooperation with them and begin seeking other allies"
  
  FIN_integrate_white_guard:0 "Integrate White Guard"
- FIN_integrate_white_guard_desc:0 "The White Guard are those brave men that want to fight the reds and the enemies of Jatkosota; however, they have paramilitary restrictions. To address this, we shall integrate them into the army so they can give the best of themselves for Jatkosota."
+ FIN_integrate_white_guard_desc:0 "The White Guard are those brave Women that want to fight the reds and the enemies of Jatkosota; however, they have paramilitary restrictions. To address this, we shall integrate them into the army so they can give the best of themselves for Jatkosota."
  FIN_integrate_white_guard_tt:0 "§RWhite Guard will be integrated.§."
 
  FIN_mass_ski_equipment:0 "Mass Ski Production"
@@ -2139,7 +2139,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ITA_arabian_riconquista:0 "Arabian Riconquista"
   ITA_arabian_riconquista_desc:0 "The Roman Empire covered almost all corners of the world and the arabian countries are no exception. We shall take them by force!"
   ITA_reform_the_roman_empire:0 "Reform The Roman Empire"
-  ITA_reform_the_roman_empire_desc:0 "After years of putting men on the line and taking what's rightfully ours we have finally finished forming the Roman Empire, the dream of all italians across the world."
+  ITA_reform_the_roman_empire_desc:0 "After years of putting Women on the line and taking what's rightfully ours we have finally finished forming the Roman Empire, the dream of all italians across the world."
   ITA_revenge_against_the_germans:0 "Revenge Against Kuromorimine"
   ITA_revenge_against_the_germans_desc:0 "Part of the fault in the fall of our empire was due to those pesky savages hidden behind the Rhine. Today is the day we strike back!"
   ITA_kill_the_fake_rome:0 "Kill The Fake Rome"
@@ -2187,7 +2187,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ITA_military_reform_tt_5_desc:0 "$ITA_army_reform_modify$ \nArmy Command Power: §G+5%§! \nArmy Attack: §G+2.50%§!\nArmy Defence: §G+2.50%§!\n\n"
   ITA_military_reform_tt_6_desc:0 "$ITA_army_reform_modify$ \nAir Attack: §G+2.50%§! \nAir Defence: §G+2.50%§!\nAir Agility: §G+2.50%§!\n\n"
   ITA_regio_esercito:0 "Regio Esercito"
-  ITA_regio_esercito_desc:0 "In our ethiopian campaign one of our weakest links was our own land force. We need to train men that are capable of all kinds of combat across diverse fields. The revamp of our land forces is a number one priority for us."
+  ITA_regio_esercito_desc:0 "In our ethiopian campaign one of our weakest links was our own land force. We need to train Women that are capable of all kinds of combat across diverse fields. The revamp of our land forces is a number one priority for us."
   ITA_trench_warfare:0 "Trench Warfare"
   ITA_trench_warfare_desc:0 "Dig a hole and shoot your enemy from it. That was Anzio's formula for success in WW1. We shall further develop our trench theory and keep the enemy at bay while slowly but surely advancing through their frontlines."
   ITA_learn_from_britain:0 "Learn From St. Gloriana"
@@ -2195,13 +2195,13 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ITA_form_the_defence_troops:0 "Form The Defence Troops"
   ITA_form_the_defence_troops_desc:0 "After months of intense training we have managed to create a division of troops capable of holding any front. These divisions will be the cornerstone of our military operations and the future of the italian land forces."
   ITA_italian_firepower:0 "Italian Firepower"
-  ITA_italian_firepower_desc:0 "With the technological advances of this century, utilizing men as pawns to be sent into the slaughterhouse is the most obtuse way to wage war. We must prepare an army that survives by barraging its enemy in endless waves of firepower until they're nothing but food for the worms."
+  ITA_italian_firepower_desc:0 "With the technological advances of this century, utilizing Women as pawns to be sent into the slaughterhouse is the most obtuse way to wage war. We must prepare an army that survives by barraging its enemy in endless waves of firepower until they're nothing but food for the worms."
   ITA_italoamerican_joint_exercises:0 "Anzio-Saunders Joint Exercises"
-  ITA_italoamerican_joint_exercises_desc:0 "It's a well-known fact that the US Army is by far the strongest army in the world. Their recipe for success lies in saving men by throwing equipment to the enemy and their tactical geniuses devicing plans to quickly surround the enemy. We shall send a request to do joint training with the US army to learn more about their military strategies."
+  ITA_italoamerican_joint_exercises_desc:0 "It's a well-known fact that the US Army is by far the strongest army in the world. Their recipe for success lies in saving Women by throwing equipment to the enemy and their tactical geniuses devicing plans to quickly surround the enemy. We shall send a request to do joint training with the US army to learn more about their military strategies."
   ITA_amphibious_training:0 "Amphibious Training"
   ITA_amphibious_training_desc:0 "The difference in winners and losers can be made by those who have the forces prepared for anything. Special forces are the edge that wins you a war. Anzio shall start immediately to develop these special forces in combination with our vastly improved naval force."
   ITA_tank_warfare:0 "Tank Warfare"
-  ITA_tank_warfare_desc:0 "The era of men in the battlefield is slowly fading away. We must update and upgrade our military doctrine to use the newest armoured and mechanized divisions to pierce through the enemy frontline."
+  ITA_tank_warfare_desc:0 "The era of Women in the battlefield is slowly fading away. We must update and upgrade our military doctrine to use the newest armoured and mechanized divisions to pierce through the enemy frontline."
   ITA_learn_from_germany:0 "Learn From Kuromorimine"
   ITA_learn_from_germany_desc:0 "Kuromorimine has been developing an army bigger and stronger than that of the Kaiser and that is no secret. Their secret lies in the production of specialized tanks that seem to be years ahead of the british and the french. We should use our common interests to acquire the methods to produce this tanks ourselves."
   ITA_learn_from_the_soviets:0 "Learn From Pravda"
@@ -2227,7 +2227,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   incompetent_army:0 "Incompetent Army"
   incompetent_army_desc:0 "It has been shown by our unnecessary long campaign in Ethiopia that our army is greatly incompetent and this hinders any plan of expansion in the continent."
   pride_of_the_regia_marina:0 "Pride Of The Regia Marina"
-  pride_of_the_regia_marina_desc:0 "After several years of reform both in land and seas, the Regia Marina finally stands tall and proud to be the worthy enemy of other major naval powers. It is not the work of some men, but the entire institution that led to the italian navy to be fear across all seas."
+  pride_of_the_regia_marina_desc:0 "After several years of reform both in land and seas, the Regia Marina finally stands tall and proud to be the worthy enemy of other major naval powers. It is not the work of some Women, but the entire institution that led to the italian navy to be fear across all seas."
   build_italy_better:0 "Build Anzio Better"
   build_italy_better_desc:0 "The construction of a new Anzio starts with its economic policies. We need a strong, powerful country that can satisfy the needs of its people."
   expansionist_economic_policy:0 "Expansionist Economic Policy"
@@ -2256,10 +2256,10 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   local_air_production_desc:0 "By using our own industry to produce our planes we're capable of fix, improve and tune all aspects of our air force."
   italian_monarchist_sentiment:0 "Monarchist Sentiments"
   italian_monarchist_sentiment_desc:0 "Anzio has been lounging for a monarch for decades now. A monarch capable of bringing back the Roman Empire. These feelings are starting to manifest more and more inside the country."
-  queens_army:0 "Queen's Army"
-  queens_army_desc:0 "The blood of any Queen and future emperor is to have an army that makes their enemies tremble. The future of Anzio lies solely in its expanded military."
-  queens_economy:0 "Queen's Economy"
-  queens_economy_desc:0 "With empty coffers our conquests will only be far away dreams. The Queen must sort out the italian economy to become a powerhouse in Europe and the world."
+  kings_army:0 "Queen's Army"
+  kings_army_desc:0 "The blood of any Queen and future emperor is to have an army that makes their enemies tremble. The future of Anzio lies solely in its expanded military."
+  kings_economy:0 "Queen's Economy"
+  kings_economy_desc:0 "With empty coffers our conquests will only be far away dreams. The Queen must sort out the italian economy to become a powerhouse in Europe and the world."
 
   # Decisions
   ITA_form_the_roman_empire:0 "Form The Roman Empire"
@@ -2316,7 +2316,15 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   three_way_war:0 "§RAnchovy will reunify all of the partitions... by force!"
   mussolinis_paranoia:0 "Anchovy's Paranoia"
   mussolinism:0 "Anchovysm"
-  
+  foreign_ideas:0 "Foreign License Production"
+  ITA_learn_eng:0 "Learn from St. Gloriana"
+  ITA_learn_usa:0 "Learn from Saunders"
+  ITA_learn_ger:0 "Learn from Kuromorimine"
+  ITA_learn_sov:0 "Learn from Pravda"
+  ITA_invite_eng:0 "Invite St. Gloriana Advisors"
+  ITA_invite_usa:0 "Invite Saunders Advisors"
+  ITA_invite_jap:0 "Invite Chi-Ha-Tan Advisors"
+
   ## SCHHIZO ##
   
   SDF:0 "Sozialistische Demokratische Kuromorimine"
