--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -84,7 +84,7 @@
  GER_fort_radio_pravda: "Festung Pravda Radio"
  GER_fort_radio_pravda_desc: "Pravda's airforce cannot stand our intel power with our RADAR tachnology. We should use this to our advantage."
  GER_extra_tech_slot: "Schwarzwaldspitzen Wissenschaft"
- GER_extra_tech_slot_desc: "German science is the best in the world!"
+ GER_extra_tech_slot_desc: "Kuromorimine science is the best in the world!"
  GER_paratroopers: "Kuromorimine Fallschirmjäger"
  GER_paratroopers_desc: "The soldiers who drop from the air shall help sabotage the enemy from their behind. Let the Fallschirmjägers be known all over!"
  GER_missiontype_tactics: "Auftragstaktik"
@@ -220,10 +220,10 @@
  GER_liberalize_desc:0 "While Maho ruled over Kuromorimine society within became more traditional and strict. Koume is starting the plan to revert these policies."
  GER_women_sufferage:0 "Magna Carta for Kuroreform"
  GER_women_sufferage_desc:0 "We shall instate the initiative in creating a society that allows for cosmopolitan development and prosperity."
- GER_jewish_citizen:0 "Jewish Citizenship"
- GER_jewish_citizen_desc:0 "While under the Nishizumi rule, Jewish citzens were repressed, inslaved and even murdered by the government. Their citizernship was even revoked. After the Civil War their citizenship rights were returned and they were accepted into society again."
- GER_jewish_relief_fund:0 "Jewish Relief Fund"
- GER_jewish_relief_fund_desc:0 "To help the struggling Jewish Population Koume has drafted a bill that will send relief funds to millions of jews across the country."
+ GER_jewish_citizen:0 "Bellwall Citizenship"
+ GER_jewish_citizen_desc:0 "While under the Nishizumi rule,Bellwall was repressed, inslaved and even murdered by the government. Their citizernship was even revoked. After the Civil War their citizenship rights were returned and they were accepted into society again."
+ GER_jewish_relief_fund:0 "Bellwall Relief Fund"
+ GER_jewish_relief_fund_desc:0 "To help the struggling Bellwall Population Koume has drafted a bill that will send relief funds to millions of Bellwall across the country."
  GER_non_discrimit:0 "Equal Army"
  GER_non_discrimit_desc:0 "Under Koume the army now can conscript anyone over 18. It doesn't matter the age, gender, race you can join the army."
  GER_nishizumi:0 "De-Nishizumification"
@@ -452,11 +452,11 @@
  GER_invite_ooarai: "Invite Ooarai"
  GER_invite_ooarai_desc: "" #not sure if ya mean these binary
  GER_invite_jatkosota: "Invite Jatkosota"
- GER_invite_jatkosota_desc: ""
+ GER_invite_jatkosota_desc: "The Kuromorimine of the north, there is much we both seek to gain through friendship"
  GER_expanded_world_sensha_do: "Expanded the World of Sensha-do"
  GER_expanded_world_sensha_do_desc: "With the world of Sensha-do expanded to its greatest extent and unified under one great league we are finally at peace."
  GER_de_nishizmization:0 "De Nishizumification Program"
- GER_de_nishizumization_desc:0 "" ##NEEDS DONE
+ GER_de_nishizumization_desc:0 "To fully protect the people of Kuromorimine, we must purge it of its dark history"
  GER_open_borders_desc:0 "Kuromorimine has kept the gates closed for too long and our rapidly growing school needs all the brilliant minds it could get. It'll help us in the long run. "
  GER_free_movement_desc:0 "As well as getting in, the students want to transfer to other schools if they don't like how we run the school, they should be free to go to other schools if they may please and they should be allowed to come back if they want to visit. We have to keep the growth going by collaborating with other schools."
  GER_economic_collab_desc:0 "With the students collaborating, it's time we collaborate with economics too. Every school should get the best of our benefits and we can push forward for our identity as one. Change Economy mode to Free Trade"
@@ -489,7 +489,6 @@
  GER_military_industry:0 "Zeitenwende"
  GER_military_industry_desc:0 "This is a turning moment for us, we must plow forwards and save Europe from the tryanny of Pravda"
  GER_military_buildup_desc:0 "The horns of war sound once more, as the final battle nears its occurrence, every women in our lands needs to know what's at stake, every factory must do more build more for eventual total victory."
-# Fuck you fixes your focus tree more ##makes more of a mess
 GER_reform_wave:0 "Reform Wave"
  GER_reform_wave_desc:0 "With Kuromorimine's new constitution in place, we should expand the school size due to the students being able to have different opinions that wouldn't be scrutinize. Let's expand on these."
  GER_free_heathcare:0 "Free Healthcare"
@@ -545,11 +544,11 @@ GER_anti_corruption_desc:0 "We must not allow the same rot that caused the rise 
 GER_forwards:0 "Forwards!"
 GER_forwards_desc:0 "Whilst much more can be done, Emi must focus on turning our nation into a land of prosperity, to show to all that we will not fail them, forwards workers to liberty and justice"
 GER_the_west:0 "Look Towards the West"
-GER_the_west_desc:"" ##NEEDS DONE
+GER_the_west_desc:"We may have our differences with both, St Gloriana and BC Freedom but one thing we have in common is similar goals for liberty"
 GER_our_own_way:0 "A United Europe?"
-GER_our_own_way_desc:0 ""
+GER_our_own_way_desc:0 "To bring about a bright future, one must consider the idea of a united europe."
 GER_expand_fortlines:0 "Defense First"
-GER_expand_fortlines_desc:0 ""
+GER_expand_fortlines_desc:0 "Kuromorimine must protect its borders from any aggressor"
 ##IDEAS
 GER_bright_future:0 "Bright Future"
 GER_denishizumization:0 "De-Nishizumification"
@@ -629,26 +628,26 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  kmm_europe_union:0 "European Union"
  kmm_austria:0 "Invite Ooarai"
  kmm_czech:0 "Invite Gregor"
- kmm_hungary:0 "Invite Hungary"
- kmm_yugo:0 "Invite Yugoslavia"
+ kmm_hungary:0 "Invite Turul"
+ kmm_yugo:0 "Invite Brazava"
  kmm_rom:0 "Invite Count"
  kmm_alb:0 "Invite Albania"
- kmm_greece:0 "Invite Greece"
+ kmm_greece:0 "Invite Hoplite"
  kmm_bulgaria:0 "Invite Yogurt"
  kmm_spain:0 "Invite Spain"
- kmm_portugal:0 "Invite Portugal"
- kmm_lit:0 "Invite Lithuana"
- kmm_lat:0 "Invite Latvia"
- kmm_est:0 "Invite Estonia"
+ kmm_portugal:0 "Invite Vimaranes"
+ kmm_lit:0 "Invite Litua"
+ kmm_lat:0 "Invite Livland"
+ kmm_est:0 "Invite Hestia"
  kmm_italy:0 "Invite Anzio"
- kmm_den:0 "Invite Denmark"
- kmm_nor:0 "Invite Norway"
- kmm_swe:0 "Invite Sweden"
+ kmm_den:0 "Invite Gilbert"
+ kmm_nor:0 "Invite Viking"
+ kmm_swe:0 "Invite Viggen"
  kmm_fin:0 "Invite Jatkosota"
  kmm_uk:0 "Invite St. Gloriana"
  kmm_fra:0 "Invite BC Freedom"
  kmm_pol:0 "Invite Bonple"
- kmm_swi:0 "Invite Switzerland"
+ kmm_swi:0 "Invite Neutrality"
  ##EU TOOLTIPS
  kmm_balkan_tooltip2:0 "§RWill be removed after completion of:§! 'Develop the Balkans'"
  kmm_iberia_tooltip:0 "§CUnlocks§! 'Help Iberia Recover' §CFocus§!"
@@ -792,13 +791,13 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  erika_mobilization_plan:0 "Erika's Mobilization Plan"
  koume_win:0 "Koume's Victory"
  de_nishizumism:0 "De Nishizumization"
- jewish_citizenship:0 "Jewish Citizenship"
- jewish_citizenship2:0 "Jewish Residents"
+ jewish_citizenship:0 "Bellwall Citizenship"
+ jewish_citizenship2:0 "Bellwall Residents"
  womens_sufferage:0 "Kuroreform"
  equal_army:0 "Equal Opportunity Army"
  british_investor:0 "St. Gloriana Investors"
  free_kuro_empire:0 "Free Kuromorimine Empire"
- switzerland:0 "Stronk Switzerland"
+ switzerland:0 "Stronk Neutrality"
  kuro_abwehr:0 "Kuro-Abwehr"
  kmm_advanced_blitzkrieg:0 "Advanced Blitzkrieg"
  kmm_treaty:0 "Kuro-Pravda Trade Agreement"
@@ -866,11 +865,11 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  kmm_vengeful_kuro: "Vengeful Kuromorimine"
  kmm_vengeful_kuro_desc: "Kuromorimine shall be defeated no longer! We will retake our rightful place on the World Senshado stage and put all the other schools back in their place!"
  kmm_officers_purged: "Officers Purged"
- kmm_officers_purged_desc: "" #Placeholder
+ kmm_officers_purged_desc: "Purged officers"
  kmm_kawashiba_sisters: "Kawashiba Sisters"
- kmm_kawashiba_sisters_desc: ""
+ kmm_kawashiba_sisters_desc: "Bellwall"
  kmm_unification_pains: "Unification Pains"
- kmm_unification_pains_desc: ""
+ kmm_unification_pains_desc: "Oh it hurts"
  kmm_gdnask_poznan_pay: "Gdańsk-Poznań Payments"
  kmm_gdnask_poznan_pay_desc: "The wealth of the Kawashiba sisters has given us much funds to boost our economy. Though in exchange we have given up our clay on Gdansk and Poznan."
 
